--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -28,22 +28,25 @@
     <div class="container">
   <div class="row align-items-center">
     <div class="col-lg-2 col-md-3 col-6">
-      <a href="./" class="brand-wrap">
+      <a href="{% url 'home_page' %}" class="brand-wrap">
         <img class="logo" src="{% static './images/logo.png' %}">
       </a> <!-- brand-wrap.// -->
     </div>
     <div class="col-lg col-sm col-md col-6 flex-grow-0">
       <div class="category-wrap dropdown d-inline-block float-right">
         <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"> 
-          <i class="fa fa-bars"></i> All category 
+          <i class="fa fa-bars"></i> Categories
         </button>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Machinery / Mechanical Parts / Tools </a>
-          <a class="dropdown-item" href="#">Consumer Electronics / Home Appliances </a>
-          <a class="dropdown-item" href="#">Auto / Transportation</a>
-          <a class="dropdown-item" href="#">Apparel / Textiles / Timepieces </a>
-          <a class="dropdown-item" href="#">Home & Garden / Construction / Lights </a>
-          <a class="dropdown-item" href="#">Beauty & Personal Care / Health </a> 
+            <a class="dropdown-item" href="{% url 'store_page' %}">
+              All Products
+            </a>
+
+          {% for category in product_categories %}
+            <a class="dropdown-item" href="{{ category.get_url }}">
+              {{ category.category_name }}
+            </a>
+          {% endfor %}
         </div>
       </div>  <!-- category-wrap.// -->
     </div> <!-- col.// -->
