--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -5,8 +5,11 @@
 <!-- ========================= SECTION PAGETOP ========================= -->
 <section class="section-pagetop bg">
   <div class="container">
-    <h2 class="title-page">Our store</h2>
-    
+    {% if 'search' in request.path %}
+      <h2 class="title-page">Search result</h2>
+    {% else %}
+      <h2 class="title-page">Our store</h2>
+    {% endif %}
   </div> <!-- container //  -->
 </section>
 <!-- ========================= SECTION INTRO END// ========================= -->
@@ -18,153 +21,174 @@
   <div class="row">
     <aside class="col-md-3">
       
-  <div class="card">
-    <article class="filter-group">
-      <header class="card-header">
-        <a href="#" data-toggle="collapse" data-target="#collapse_1" aria-expanded="true" class="">
-          <i class="icon-control fa fa-chevron-down"></i>
-          <h6 class="title">Categories</h6>
-        </a>
-      </header>
-      <div class="filter-content collapse show" id="collapse_1" style="">
-        <div class="card-body">
-          <ul class="list-menu">
-            <li>
-              <a href="{% url 'store_page' %}">
-                All Products
-              </a>
-            </li>
+      <div class="card">
+        <article class="filter-group">
+          <header class="card-header">
+            <a href="#" data-toggle="collapse" data-target="#collapse_1" aria-expanded="true" class="">
+              <i class="icon-control fa fa-chevron-down"></i>
+              <h6 class="title">Categories</h6>
+            </a>
+          </header>
+          <div class="filter-content collapse show" id="collapse_1" style="">
+            <div class="card-body">
+              <ul class="list-menu">
+                <li>
+                  <a href="{% url 'store_page' %}">
+                    All Products
+                  </a>
+                </li>
 
-          {% for category in product_categories %}
-            <li>
-              <a href="{{ category.get_url }}">
-                {{ category.category_name }}
-              </a>
-            </li>
-          {% endfor %}
-          </ul>
-  
-        </div> <!-- card-body.// -->
-      </div>
-    </article> <!-- filter-group  .// -->
-    <article class="filter-group">
-      <header class="card-header">
-        <a href="#" data-toggle="collapse" data-target="#collapse_4" aria-expanded="true" class="">
-          <i class="icon-control fa fa-chevron-down"></i>
-          <h6 class="title">Sizes </h6>
-        </a>
-      </header>
-      <div class="filter-content collapse show" id="collapse_4" style="">
-        <div class="card-body">
-          <label class="checkbox-btn">
-            <input type="checkbox">
-            <span class="btn btn-light"> XS </span>
-          </label>
-  
-          <label class="checkbox-btn">
-            <input type="checkbox">
-            <span class="btn btn-light"> SM </span>
-          </label>
-  
-          <label class="checkbox-btn">
-            <input type="checkbox">
-            <span class="btn btn-light"> LG </span>
-          </label>
-  
-          <label class="checkbox-btn">
-            <input type="checkbox">
-            <span class="btn btn-light"> XXL </span>
-          </label>
-      </div><!-- card-body.// -->
-      </div>
-    </article> <!-- filter-group .// -->
-    
-    <article class="filter-group">
-      <header class="card-header">
-        <a href="#" data-toggle="collapse" data-target="#collapse_3" aria-expanded="true" class="">
-          <i class="icon-control fa fa-chevron-down"></i>
-          <h6 class="title">Price range </h6>
-        </a>
-      </header>
-      <div class="filter-content collapse show" id="collapse_3" style="">
-        <div class="card-body">
-          
-          <div class="form-row">
-          <div class="form-group col-md-6">
-            <label>Min</label>
-            <!-- <input class="form-control" placeholder="$0" type="number"> -->
-              <select class="mr-2 form-control">
-              <option value="0">$0</option>
-              <option value="50">$50</option>
-              <option value="100">$100</option>
-              <option value="150">$150</option>
-              <option value="200">$200</option>
-              <option value="500">$500</option>
-              <option value="1000">$1000</option>
-            </select>
+              {% for category in product_categories %}
+                <li>
+                  <a href="{{ category.get_url }}">
+                    {{ category.category_name }}
+                  </a>
+                </li>
+              {% endfor %}
+              </ul>
+      
+            </div> <!-- card-body.// -->
           </div>
-          <div class="form-group text-right col-md-6">
-            <label>Max</label>
-              <select class="mr-2 form-control">
-              <option value="50">$50</option>
-              <option value="100">$100</option>
-              <option value="150">$150</option>
-              <option value="200">$200</option>
-              <option value="500">$500</option>
-              <option value="1000">$1000</option>
-              <option value="2000">$2000+</option>
-            </select>
+        </article> <!-- filter-group  .// -->
+        <article class="filter-group">
+          <header class="card-header">
+            <a href="#" data-toggle="collapse" data-target="#collapse_4" aria-expanded="true" class="">
+              <i class="icon-control fa fa-chevron-down"></i>
+              <h6 class="title">Sizes </h6>
+            </a>
+          </header>
+          <div class="filter-content collapse show" id="collapse_4" style="">
+            <div class="card-body">
+              <label class="checkbox-btn">
+                <input type="checkbox">
+                <span class="btn btn-light"> XS </span>
+              </label>
+      
+              <label class="checkbox-btn">
+                <input type="checkbox">
+                <span class="btn btn-light"> SM </span>
+              </label>
+      
+              <label class="checkbox-btn">
+                <input type="checkbox">
+                <span class="btn btn-light"> LG </span>
+              </label>
+      
+              <label class="checkbox-btn">
+                <input type="checkbox">
+                <span class="btn btn-light"> XXL </span>
+              </label>
+          </div><!-- card-body.// -->
           </div>
-          </div> <!-- form-row.// -->
-          <button class="btn btn-block btn-primary">Apply</button>
-        </div><!-- card-body.// -->
-      </div>
-    </article> <!-- filter-group .// -->
-    
-  </div> <!-- card.// -->
+        </article> <!-- filter-group .// -->
+        
+        <article class="filter-group">
+          <header class="card-header">
+            <a href="#" data-toggle="collapse" data-target="#collapse_3" aria-expanded="true" class="">
+              <i class="icon-control fa fa-chevron-down"></i>
+              <h6 class="title">Price range </h6>
+            </a>
+          </header>
+          <div class="filter-content collapse show" id="collapse_3" style="">
+            <div class="card-body">
+              
+              <div class="form-row">
+              <div class="form-group col-md-6">
+                <label>Min</label>
+                <!-- <input class="form-control" placeholder="$0" type="number"> -->
+                  <select class="mr-2 form-control">
+                  <option value="0">$0</option>
+                  <option value="50">$50</option>
+                  <option value="100">$100</option>
+                  <option value="150">$150</option>
+                  <option value="200">$200</option>
+                  <option value="500">$500</option>
+                  <option value="1000">$1000</option>
+                </select>
+              </div>
+              <div class="form-group text-right col-md-6">
+                <label>Max</label>
+                  <select class="mr-2 form-control">
+                  <option value="50">$50</option>
+                  <option value="100">$100</option>
+                  <option value="150">$150</option>
+                  <option value="200">$200</option>
+                  <option value="500">$500</option>
+                  <option value="1000">$1000</option>
+                  <option value="2000">$2000+</option>
+                </select>
+              </div>
+              </div> <!-- form-row.// -->
+              <button class="btn btn-block btn-primary">Apply</button>
+            </div><!-- card-body.// -->
+          </div>
+        </article> <!-- filter-group .// -->
+        
+      </div> <!-- card.// -->
   
     </aside> <!-- col.// -->
+
     <main class="col-md-9">
   
-  <header class="border-bottom mb-4 pb-3">
-      <div class="form-inline">
-        <span class="mr-md-auto"><b>{{ products_count }}</b> items found </span>
-        
-      </div>
-  </header><!-- sect-heading -->
-  
-  <div class="row">
-    {% for product in products %}
-    <div class="col-md-4">
-      <figure class="card card-product-grid">
-        <div class="img-wrap"> 
-          <a href="{{ product.get_url }}"><img src="{{ product.image.url }}"></a>
-        </div> <!-- img-wrap.// -->
-        <figcaption class="info-wrap">
-          <div class="fix-height">
-            <a href="{{ product.get_url }}" class="title">{{ product.product_name }}</a>
-            <div class="price-wrap mt-2">
-              <span class="price">{{ product.price }}</span>
-            </div> <!-- price-wrap.// -->
+      <header class="border-bottom mb-4 pb-3">
+          <div class="form-inline">
+            <span class="mr-md-auto"><b>{{ products_count }}</b> items found </span>
           </div>
-          <a href="{% url 'add_to_cart' product.id %}" class="btn btn-block btn-primary">Add to cart</a>
-        </figcaption>
-      </figure>
-    </div> <!-- col.// -->
-    {% endfor %}
+      </header><!-- sect-heading -->
+    
+      <div class="row">
+        {% if page_obj %}
+          {% for product in page_obj %}
+          <div class="col-md-4">
+            <figure class="card card-product-grid">
+              <div class="img-wrap"> 
+                <a href="{{ product.get_url }}"><img src="{{ product.image.url }}"></a>
+              </div> <!-- img-wrap.// -->
+              <figcaption class="info-wrap">
+                <div class="fix-height">
+                  <a href="{{ product.get_url }}" class="title">{{ product.product_name }}</a>
+                  <div class="price-wrap mt-2">
+                    <span class="price">{{ product.price }}</span>
+                  </div> <!-- price-wrap.// -->
+                </div>
+                <a href="{{ product.get_url }}" class="btn btn-block btn-primary"> 
+                  <span class="text">View Details</span>
+                </a>
+              </figcaption>
+            </figure>
+          </div> <!-- col.// -->
+          {% endfor %}
+        {% else %}
+          <h2 class="text-center">No products match your search. Please try again.</h2>
+        {% endif %}
+      </div> <!-- row end.// -->
   
-  </div> <!-- row end.// -->
   
-  
-  <nav class="mt-4" aria-label="Page navigation sample">
-    <ul class="pagination">
-      <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
-      <li class="page-item active"><a class="page-link" href="#">1</a></li>
-      <li class="page-item"><a class="page-link" href="#">2</a></li>
-      <li class="page-item"><a class="page-link" href="#">3</a></li>
-      <li class="page-item"><a class="page-link" href="#">Next</a></li>
-    </ul>
-  </nav>
+      <nav class="mt-4" aria-label="Page navigation sample">
+        {% if page_obj.has_other_pages %}
+          <ul class="pagination">
+            {% if page_obj.has_previous %}
+              <li class="page-item"><a href="?page={{ page_obj.previous_page_number }}" class="page-link">previous</a></li>
+            {% else %}
+              <li class="page-item disabled"><a href="#" class="page-link">previous</a></li>
+            {% endif %}
+
+            {% for page_number in page_obj.paginator.page_range %}
+              {% if page_number == page_obj.number %}
+                <li class="page-item active"><a class="page-link" href="#"> {{ page_number }} </a></li>
+              {% else %}
+                <li class="page-item"><a class="page-link" href="?page={{ page_number}}"> {{ page_number }} </a></li>
+              {% endif %}
+            {% endfor %}
+            
+            {% if page_obj.has_next %}
+              <li class="page-item"><a href="?page={{ page_obj.next_page_number }}" class="page-link">next</a></li>
+            {% else %}
+              <li class="page-item disabled"><a href="#" class="page-link">next &raquo;</a></li>
+            {% endif %}
+          </ul>
+        {% endif %}
+      </nav>
   
     </main> <!-- col.// -->
   
