--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -28,16 +28,21 @@
         </tr>
         </thead>
         <tbody>
-        
-        {% for cart_item in cart_items %}
-        <tr>
+          {% for cart_item in cart_items %}
+          <tr>
           <td>
             <figure class="itemside align-items-center">
-              <div class="aside"><img src="{{ cart_item.product.image.url }}" class="img-sm"></div>
-              <figcaption class="info">
-                <a href="{{ cart_item.product.get_url }}" class="title text-dark">{{ cart_item.product.product_name }}</a>
-                <p class="text-muted small">Color: 25 Mpx <br> Size: Canon</p>
-              </figcaption>
+            <div class="aside"><img src="{{ cart_item.product.image.url }}" class="img-sm"></div>
+            <figcaption class="info">
+              <a href="{{ cart_item.product.get_url }}" class="title text-dark">{{ cart_item.product.product_name }}</a>
+              {% if cart_item.variations.all %}
+                {% for variation in cart_item.variations.all %}
+                  <p class="text-muted small">
+                      {{ variation.variation_category | capfirst }}: {{ variation.variation_value | capfirst }}
+                  </p>
+                {% endfor %}
+              {% endif %}
+            </figcaption>
             </figure>
           </td>
           <td> 
@@ -45,11 +50,18 @@
             <div class="col"> 
               <div class="input-group input-spinner">
                 <div class="input-group-prepend">
-                <a href={% url 'decrement_item_quantity' cart_item.product.id %} class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i> </a>
+                  <a href={% url 'decrement_item_quantity' cart_item.product.id cart_item.id %} 
+                     class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i> </a>
                 </div>
                 <input type="text" class="form-control"  value="{{ cart_item.quantity }}">
                 <div class="input-group-append">
-                <a href={% url 'add_to_cart' cart_item.product.id %} class="btn btn-light" type="button" id="button-minus"> <i class="fa fa-plus"></i> </a>
+                  <form action="{% url 'add_to_cart' cart_item.product.id %}" method=POST>
+                    {% csrf_token %}
+                    {% for variation in cart_item.variations.all %}
+                      <input type="hidden" name="{{ variation.variation_category | lower }}" value = "{{ variation.variation_value }}">
+                    {% endfor %}
+                    <button class="btn btn-light" type="submit" id="button-minus"> <i class="fa fa-plus"></i> </button>
+                  </form>
                 </div>
               </div> <!-- input-group.// -->
             </div> <!-- col.// -->
@@ -61,9 +73,11 @@
             </div> <!-- price-wrap .// -->
           </td>
           <td class="text-right"> 
-          <a href="{% url 'remove_cart_item' cart_item.product.id %} " class="btn btn-danger"> Remove</a>
+          <a href="{% url 'remove_cart_item' cart_item.product.id cart_item.id %} "
+             onclick="return confirm('Are you sure you want to delete this item?')"
+             class="btn btn-danger">Remove</a>
           </td>
-        </tr>
+          </tr>
         {% endfor %}
 
         </tbody>
