--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarTop4">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item dropdown">
-         <a href="#" class="nav-link">   English </a>
+         <a href="#" class="nav-link"> English </a>
           
       </li>
       <li class="nav-item dropdown">
@@ -66,14 +66,24 @@
       </form> <!-- search-wrap .end// -->
     </div> <!-- col.// -->
     <div class="col-lg-3 col-sm-6 col-8 order-2 order-lg-3">
-          <div class="d-flex justify-content-end mb-3 mb-lg-0">
+        <div class="d-flex justify-content-end mb-3 mb-lg-0">
+          {% if user.id is None %}
             <div class="widget-header">
               <small class="title text-muted">Welcome guest!</small>
               <div> 
-                <a href="./signin.html">Sign in</a> <span class="dark-transp"> | </span>
-                <a href="./register.html"> Register</a>
+                <a href="{% url 'login_page' %}">Sign in</a> <span class="dark-transp"> | </span>
+                <a href="{% url 'register_page' %}"> Register</a>
               </div>
             </div>
+          {% else %}
+          <div class="widget-header">
+            <small class="title text-muted">Welcome {{ user.first_name }}</small>
+            <div> 
+              <a href="{% url 'home_page' %}">Dashboard</a> <span class="dark-transp"> | </span>
+              <a href="{% url 'logout_page' %}">Log Out</a>
+            </div>
+          </div>
+          {% endif %}
             <a href="{% url 'cart_page' %}" class="widget-header pl-3 ml-3">
               <div class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></div>
               <span class="badge badge-pill badge-danger notify">{{ cart_item_count }}</span>
