--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -55,7 +55,7 @@
                 </div>
                 <input type="text" class="form-control"  value="{{ cart_item.quantity }}">
                 <div class="input-group-append">
-                  <form action="{% url 'add_to_cart' cart_item.product.id %}" method=POST>
+                  <form action="{% url 'add_to_cart' cart_item.product.id %}" method="POST">
                     {% csrf_token %}
                     {% for variation in cart_item.variations.all %}
                       <input type="hidden" name="{{ variation.variation_category | lower }}" value = "{{ variation.variation_value }}">
