--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -15,7 +15,7 @@
   
   {% else %}
 
-    <div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
+    <div class="card mx-auto" style="max-width: 600px; margin-top:100px;">
       <div class="card-body">
         <h4 class="card-title mb-4">Sign in</h4>
 
@@ -33,7 +33,7 @@
           </div> <!-- form-group// -->
               
           <div class="form-group">
-            <a href="#" class="float-right">Forgot password?</a>      
+            <a href="{% url 'forgot_password_page' %}" class="float-right">Forgot password?</a>      
           </div> <!-- form-group form-check .// -->
 
           <div class="form-group">
